refactor2: implement the skeleton — kernel/infra/sim/llm/tool/agent/company/bootstrap